--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         <div id="myLinks">
             <a href="index.html">Home</a>
             <a href="index.html#abouttab">About</a>
-            <a href="#trips">Trips</a>
+            <a href="#tripsII">Trips</a>
             <a href="contact.html#contact">Contact</a>
         </div>
 
