--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="myLinks">
             <a href="index.html">Home</a>
             <a href="#abouttab">About</a>
-            <a href="#trips">Trips</a>
+            <a href="#featuredacc">Trips</a>
             <a href="contact.html#contact">Contact</a>
         </div>
 
@@ -42,7 +42,7 @@
   <div id="myDropdown" class="dropdown-content">
         <a href="index.html">Home</a>
         <a href="#about">About</a>
-        <a href="#featuredacc">Trips</a>
+        <a href="contact.html#tripsIII">Trips</a>
         <a href="contact.html#contact">Contact</a>
                        
   </div>
@@ -416,6 +416,7 @@
     <div><h3>LINKS</h3></div>
             <a href="index.html">Home</a>
             <a href="#abouttab">About</a>
+            <a href=""
             <a href="contact.html#contact">Contact</a>
            
 </div>
